--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,13 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = false
 
+[*.md]
+charset = unset
+end_of_line = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+indent_size = unset
+
 [Makefile]
 indent_style = tab
 
